feat: bulk query
